[package]
name = "fengni"
version = "0.6.0"
edition = "2021"
description = "An encrypted communication protocol library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/linkbitflower/fengni-v1"
readme = "README.md"
keywords = ["cryptography", "protocol", "encryption", "x25519", "chacha20"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"

# Constant-time operations
subtle = { version = "2", default-features = false }

# Secure memory handling
zeroize = { version = "1", features = ["derive"] }

# Serialization
prost = "0.13"
bytes = "1"

# Error handling
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[target.'cfg(not(fuzz))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
