[package]
name = "fengni-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fengni]
path = ".."

# Prevent this from being published to crates.io
[workspace]
members = ["."]

[[bin]]
name = "decode_message"
path = "fuzz_targets/decode_message.rs"
test = false
doc = false
